--- a/Notesandtenzies/package.json
+++ b/Notesandtenzies/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://theeurbanlegend.github.io/Notes-app",
   "name": "notesandtenzies",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -26,6 +29,7 @@
     "eslint-plugin-react": "^7.25.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^5.0.0",
     "vite": "^4.3.9"
   }
 }
